--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,18 @@
 			<version>2.3.18</version>
 		</dependency>
 
+        <!-- -->
+        <dependency>
+            <groupId>net.vidageek</groupId>
+            <artifactId>mirror</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>br.com.caelum</groupId>
+            <artifactId>iogi</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
